[package]
name = "comiconv"
version = "0.2.1"
edition = "2021"
authors = ["Chrontax"]
description = "A command line tool to convert comic book archives to other formats."
readme = "README.md"
homepage = "https://github.com/chrontax/comiconv"
repository = "https://github.com/chrontax/comiconv"
license = "Apache-2.0 OR MIT"
keywords = ["comic", "convert", "cbz", "cbt", "cb7"]
categories = ["command-line-utilities"]

[dependencies]
image = { version = "0.24.7", default-features = false, features = ["png", "webp", "webp-encoder", "jpeg"] }
indicatif = "0.17.7"
infer = { version = "0.15.0", default-features = false }
libavif-image = "0.11.0"
rayon = "1.8.0"
sevenz-rust = "0.5.3"
sha2 = "0.10.8"
tar = "0.4.40"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "comiconv"
