[package]
name = "comiconv"
version = "0.3.3"
edition = "2021"
authors = ["Chrontax"]
description = "A command line tool to convert comic book archives to other formats."
readme = "README.md"
homepage = "https://github.com/chrontax/comiconv"
repository = "https://github.com/chrontax/comiconv"
license = "Apache-2.0 OR MIT"
keywords = ["comic", "convert", "cbz", "cbt", "cb7"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
image = { version = "0.25.1", default-features = false, features = [
  "png",
  "webp",
  "jpeg",
] }
indicatif = "0.17.7"
libavif-image = "0.13.0"
rayon = "1.8.0"
sha2 = "0.10.8"
cra = "0.1.2"
thiserror = "1.0.56"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "comiconv"
